--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "bignumber.js": "^2.3.0",
     "body-parser": "^1.15.0",
+    "es6-promisify": "^4.0.0",
     "express": "^4.13.4",
     "js-sha3": "^0.5.1",
     "left-pad": "^1.1.0",
+    "minimist": "^1.2.0",
     "node-localstorage": "^1.3.0",
     "truffle": "jtremback/truffle#babel-polyfill",
     "web3": "^0.15.3"
@@ -21,10 +23,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.8.0",
-    "eslint": "^2.9.0"
+    "eslint": "^2.9.0",
+    "forever": "^0.15.1"
   },
   "scripts": {
-    "test": "truffle test"
+    "debug": "forever -c \"node --debug-brk\" ./offchain/index.js",
+    "test": "truffle test ./test/stateChannels.js"
   },
   "author": "jehan.tremback@gmail.com",
   "license": "MIT",
