--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "left-pad": "^1.1.0",
     "minimist": "^1.2.0",
     "node-localstorage": "^1.3.0",
+    "tcomb": "^3.0.0",
     "truffle": "jtremback/truffle#babel-polyfill",
     "web3": "^0.15.3"
   },
@@ -25,12 +26,14 @@
     "babel-register": "^6.8.0",
     "eslint": "^2.9.0",
     "ethereumjs-testrpc": "^2.0.7",
-    "forever": "^0.15.1"
+    "forever": "^0.15.1",
+    "nodemon": "^1.9.2"
   },
   "scripts": {
     "debug": "forever -c \"node --debug-brk\" ./offchain/index.js",
     "testrpc": "testrpc",
-    "test": "truffle test ./test/stateChannels.js"
+    "test": "truffle test ./test/stateChannels.js",
+    "watch_offchain": "nodemon ./offchain/index.js"
   },
   "author": "jehan.tremback@gmail.com",
   "license": "MIT",
