--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bignumber.js": "^2.3.0",
     "body-parser": "^1.15.0",
     "es6-promisify": "^4.0.0",
+    "ether-pudding": "^2.0.9",
     "express": "^4.13.4",
     "js-sha3": "^0.5.1",
     "left-pad": "^1.1.0",
@@ -22,6 +23,7 @@
     "babel-eslint": "^6.0.2",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.8.0",
     "eslint": "^2.9.0",
@@ -34,7 +36,7 @@
     "testrpc": "testrpc",
     "test": "truffle test ./test/stateChannels.js",
     "watch_offchain": "nodemon ./offchain/index.js",
-    "watch_offchain_tests": "nodemon ./offchain/test/index.js"
+    "watch_offchain_tests": "nodemon ./offchain/test/loader.js"
   },
   "author": "jehan.tremback@gmail.com",
   "license": "MIT",
