--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint": "^2.9.0",
     "ethereumjs-testrpc": "^2.0.7",
     "forever": "^0.15.1",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "tape-async": "^2.1.0"
   },
   "scripts": {
     "debug": "forever -c \"node --debug-brk\" ./offchain/index.js",
