--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bignumber-to-string": "^0.1.3",
     "bignumber.js": "^2.3.0",
     "body-parser": "^1.15.0",
     "es6-promisify": "^4.0.0",
