--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "bignumber.js": "^2.3.0",
     "body-parser": "^1.15.0",
     "es6-promisify": "^4.0.0",
-    "ether-pudding": "^2.0.9",
+    "ether-pudding": "^3.0.3",
     "express": "^4.13.4",
     "js-sha3": "^0.5.1",
     "left-pad": "^1.1.0",
     "minimist": "^1.2.0",
     "node-localstorage": "^1.3.0",
+    "solc": "^0.3.4",
     "tcomb": "^3.0.0",
     "truffle": "jtremback/truffle#babel-polyfill",
     "web3": "^0.15.3"
@@ -38,7 +39,8 @@
     "testrpc": "testrpc",
     "test": "truffle test ./test/stateChannels.js",
     "watch_offchain": "nodemon ./offchain/index.js",
-    "watch_offchain_tests": "nodemon ./offchain/test/loader.js"
+    "watch_offchain_tests": "nodemon ./offchain/test/loader.js",
+    "offchain_tests": "node ./offchain/test/loader.js"
   },
   "author": "jehan.tremback@gmail.com",
   "license": "MIT",
