cli test for contract creation works but 1/2 complete

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "start": "node offchain/loader.js",
     "cli": "node offchain/cli.js",
+    "cli_tests": "node ./offchain/test/cli_loader.js",
     "test": "node ./test/loader.js",
     "offchain_tests": "node ./offchain/test/loader.js"
   },
